upgrading to {N} 2.0, with changes to versions and letter-spacing fix so we can see the logo

--- a/app/pages/login/login.android.css
+++ b/app/pages/login/login.android.css
@@ -4,13 +4,13 @@
 }
 .initial-label {
   font-size: 32;
-  letter-spacing: 1.1;
+  letter-spacing: 0.4;
 }
 .main-label {
   font-size: 28;
   margin-top: 32;
   margin-bottom: 32;
-  letter-spacing: 1.1;
+  letter-spacing: 0.4;
 }
 TextField {
   margin-bottom: 10;
